--- a/Mission 5/style.css
+++ b/Mission 5/style.css
@@ -39,45 +39,25 @@ nav.squelette ul ul {
     list-style-type: none;
     padding: 0;
     z-index: 1000;
-    width: 200px;
+    width: 150px;
 }
 
 nav.squelette ul li:hover > ul {
     display: block;
 }
 
-nav.squelette ul ul li {
-    width: 100%;
-}
-
 nav.squelette ul ul li a {
     display: block;
     padding: 10px;
+    background-color: #e0fff4;
     color: #333;
-}
-
-nav.squelette ul ul li:nth-child(1) a {
-    background-color: #90EE90;
-}
-
-nav.squelette ul ul li:nth-child(2) a {
-    background-color: #90EE90;
-}
-
-nav.squelette ul ul li:nth-child(3) a {
-    background-color: #90EE90;
-}
-
-nav.squelette ul ul li:nth-child(4) a {
-    background-color: #90EE90;
-}
-
-nav.squelette ul ul li:nth-child(5) a {
-    background-color: #90EE90;
+    border: 1px solid #ddd;
+    transition: background-color 0.3s;
 }
 
 nav.squelette ul ul li a:hover {
     background-color: #00ff00;
+    color: white;
 }
 
 nav.squelette ul li {
@@ -90,36 +70,78 @@ nav.squelette > ul::after {
     clear: both;
 }
 
-@media screen and (max-width: 680px) {
-    nav.squelette label {
+@media (max-width: 680px) {
+    .menu-icon {
         display: block;
-        background-color: #00a676;
-        color: white;
-        text-align: center;
-        padding: 15px;
-        cursor: pointer;
     }
 
-    nav.squelette ul {
+    nav ul {
         display: none;
         flex-direction: column;
     }
 
-    input[type="checkbox"]:checked ~ ul {
+    #menu-toggle:checked + .menu-icon + nav ul {
         display: flex;
     }
 
-    nav.squelette ul li {
+    nav ul li {
         width: 100%;
     }
 
-    nav.squelette ul ul {
-        position: relative;
-        width: 100%;
-    }
-
-    nav.squelette ul ul li a {
-        width: 100%;
+    nav ul li a {
         padding: 15px;
+        text-align: left;
     }
+
+    nav ul li ul {
+        position: static;
+        display: none;
+        box-shadow: none;
+    }
+
+    nav ul li:hover > ul {
+        display: block;
+    }
+
+    nav ul li ul li a {
+        padding-left: 20px;
+    }
+}
+
+main {
+    padding: 20px;
+}
+
+section {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    padding: 20px;
+    margin-bottom: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.download-link {
+    display: inline-block;
+    margin-top: 10px;
+    padding: 10px 15px;
+    background-color: #800080;
+    color: white;
+    text-decoration: none;
+    border-radius: 4px;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.download-link:hover {
+    background-color: #4B0082;
+    transform: scale(1.05);
+}
+
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
